--- a/app/css/coleta.css
+++ b/app/css/coleta.css
@@ -15,23 +15,43 @@ header {
   background: linear-gradient(135deg, #bde4a2, #89dcc5);
   color: white;
   text-align: center;
-  padding: 40px 20px;
+  padding: 2px;
   font-size: 2rem;
   letter-spacing: 1px;
   border-bottom: 10px solid #4d8c8c;
+  padding: 40px;
 }
 
 header img {
-  width: 400px;
+  width: 200px;
 }
 
-nav {
+nav{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #7fb5b5;
+}
+
+nav ul {
   background-color: #7fb5b5;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   gap: 30px;
   padding: 15px 0;
-  border-radius: 0 0 20px 20px;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  align-content: center;
+  width: 90%;
+}
+
+nav ul li{
+  list-style: none;
+}
+
+nav img{
+  width: 100px;
 }
 
 nav a {
@@ -39,14 +59,16 @@ nav a {
   text-decoration: none;
   font-size: 1.1rem;
   font-weight: bold;
-  padding: 12px 25px;
-  border-radius: 50px;
-  background-color: #66a3a3;
+  /* padding: 12px; */
+  /* border-radius: 50px; */
+  /* background-color: #66a3a3; */
+  
   transition: background-color 0.3s, transform 0.3s;
+  
 }
 
-nav a:hover {
-  background-color: #4d8c8c;
+nav ul li a:hover {
+  /* background-color: #4d8c8c; */
   transform: scale(1.05);
 }
 
