--- a/app/css/home.css
+++ b/app/css/home.css
@@ -19,6 +19,7 @@ header {
   font-size: 2rem;
   letter-spacing: 1px;
   border-bottom: 10px solid #4d8c8c;
+  padding: 40px;
 }
 
 header img {
@@ -30,6 +31,8 @@ nav{
   justify-content: space-around;
   align-items: center;
   background-color: #7fb5b5;
+  position: sticky;
+  top: 0;
 }
 
 nav ul {
@@ -38,8 +41,7 @@ nav ul {
   justify-content: space-around;
   gap: 30px;
   padding: 15px 0;
-  position: sticky;
-  top: 0;
+  
   z-index: 1000;
   align-content: center;
   width: 90%;
