--- a/app/templates/cadastro.html
+++ b/app/templates/cadastro.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro - Recicla Aí</title>
-    <link rel="stylesheet" href="css/cadastro.css">
+    <title>Recicla Aí</title>
+    <!-- <link rel="stylesheet" href="../css/home.css"> -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='cadastro.css') }}">
 </head>
 
 <body>
+
+    <nav>
+        <!-- <img src="logo_header2.svg" alt="recicla aí logo"> -->
+        <img src="{{ url_for('static', filename='logo_header2.svg') }}" alt="Minha Imagem" width="300">
+        <ul>
+            <li><a href="{{ url_for('sobre') }}">Sobre</a></li>
+            <li><a href="{{ url_for('coleta') }}">Pontos de Coleta</a></li>
+            <li><a href="{{ url_for('contato') }}">Contato</a></li>
+            <li><a href="{{ url_for('cadastro') }}" target="_blank">Cadastre-se</a></li>
+        </ul>
+        
+         
+    </nav>
     <header>
         <link rel="reciclaai icon" type="imagex/png" href="logo_icon.ico">
-        <img src="logo_header2.svg" alt="recicla aí logo">
-        <h1>Cadastro</h1>
+        <!-- <img src="logo_header2.svg" alt="recicla aí logo"> -->
+        <img src="{{ url_for('static', filename='logo_header2.svg') }}" alt="Minha Imagem" width="300">
+        <h1>Transformando resíduos em oportunidades!</h1>
     </header>
-    <nav>
-        <a href="home.html">Home</a>
-        <a href="sobre.html">Sobre</a>
-        <a href="coleta.html">Pontos de Coleta</a>
-        <!-- <a href="contato.html">Contato</a> -->
-        <li><a href="c.html" target="_blank" >Cadastre-se</a></li>
-    </nav>
 
+    
     <main>
         <section class="section">
             <h2>Cadastre-se como</h2>
